0.05 - 1 Apr 2012
    - Update for Perl 5.12 - 5.16.
    - Do not use PERL_DL_NONLAZY=1
    - Fix wrong t/06pp_aeach.t line 74

0.04 - 21 Jan 2008
    - Update for new ops in Perl 5.10.
    - Fix a bug in OP_PUSHRE dispatch (found by Jim Cromie).
    - New tests.
    - Better error message for invalid opcodes
    - Factorize the four ops that have the same body as OP_NULL

0.03 - 06 Sep 2005
    Handle the case of the mapstart op, which hasn't a pp function
    corresponding to its type

0.02 - 06 Sep 2005
    Inline some small hot ops, taking code from current bleadperl :
    null, stub, scalar, pushmark, const, gv, pushre, stringify, and, or,
    cond_expr, nextstate, unstack, setstate

0.01 - 02 Sep 2005
    First version.