@@ -1,7 +1,8 @@
 0.05 - 1 Apr 2012
-    - Update for Perl 5.12 - 5.16.
+    - Update new ops, new runops loop for Perl 5.12 - 5.16.
     - Do not use PERL_DL_NONLAZY=1
     - Fix wrong t/06pp_aeach.t line 74
+    - Added hintseval
 
 0.04 - 21 Jan 2008
     - Update for new ops in Perl 5.10.
